--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "seed:superadmin": "node seeder/superAdminSeeder.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
     "react": "^19.2.0",
